PROJECT (cusp)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

SET(CUSP_VERSION 0.0.1)
SET(CMAKE_BUILD_TYPE Release)

SET(CUSP_LIB "${CMAKE_CURRENT_SOURCE_DIR}/include")
SET(CUSP_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")

message(${CUSP_LIB} ${CUSP_SRC})

INCLUDE_DIRECTORIES(${CUSP_LIB})

SET(CUDA_PROPAGATE_HOST_FLAGS OFF) # ??

FIND_PACKAGE(CUDA REQUIRED)
SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -O3 -std=c++11 --shared -fPIC")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")


FILE(GLOB CUSP_CPP_FILES "${CUSP_SRC}/*.cpp")
SET(LIB_NAME "cusp")
CUDA_ADD_LIBRARY(${LIB_NAME} SHARED
	${CUSP_CPP_FILES}
)

SET(PUBLIC_HEADERS "cusp")
INSTALL(FILES ${CUSP_LIB}/${PUBLIC_HEADERS} DESTINATION include)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${LIB_NAME}.so DESTINATION lib)
