PROJECT (cusp)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

SET(CUSP_VERSION 0.0.1)
SET(CMAKE_BUILD_TYPE Release)

SET(CUSP_LIB "${CMAKE_CURRENT_SOURCE_DIR}/include")
SET(CUSP_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")

INCLUDE_DIRECTORIES(${CUSP_LIB})

SET(CUDA_PROPAGATE_HOST_FLAGS OFF)

FIND_PACKAGE(CUDA REQUIRED)
SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -O3 -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FILE(GLOB CUSP_CPP_FILES "${CUSP_SRC}/*.cpp")
FILE(GLOB CUSP_CU_FILES "${CUSP_SRC}/*.cu")
#FILE(GLOB CUSP_HPP_FILES "${CUSP_SRC}/*.hpp")
#FILE(GLOB CUSP_CUH_FILES "${CUSP_SRC}/*.cuh")
SET(LIB_NAME "cusp")

CUDA_ADD_LIBRARY(${LIB_NAME} SHARED
	${CUSP_CPP_FILES}
	${CUSP_CU_FILES}
	#${CUSP_HPP_FILES}
	#${CUSP_CUH_FILES}
)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${LIB_NAME}.so DESTINATION lib)
INSTALL(FILES ${CUSP_LIB}/cusp DESTINATION include)
INSTALL(DIRECTORY ${CUSP_LIB}/ DESTINATION include/cusp_sub
	PATTERN "${CUSP_LIB}/cusp" EXCLUDE)
